--- a/pages/audio_detail/audio_detail.wxml
+++ b/pages/audio_detail/audio_detail.wxml
@@ -1,4 +1,5 @@
 <!-- pages/audio_detail/index.wxml -->
+<import src="../../wxParse/wxParse.wxml" />
 <view class="container">
   <view class="audio-wrap">
     <!-- 背景图,高斯模糊 -->
@@ -21,25 +22,22 @@
         <view class="author">{{book.author}}</view>
       </view>
       <view class="slider-container">
-        <text class="slider-time">{{currentPosition === 0 ? '' : currentPosition}}</text>
+        <text class="slider-time">{{currentPosition === 0 ? '00:00' : currentPosition}}</text>
         <slider value="{{sliderValue}}" bindchange="bindSliderchange" activeColor="#1393FC" backgroundColor="#E2E2E2" style="width: 64%;margin: 0;" block-size="8" block-color="#fff" />
-        <text class="slider-time">{{duration === 0 ? '' : duration}}</text>
+        <text class="slider-time">{{duration === 0 ? audioList[0].sectionSec : duration}}</text>
       </view>
       <view class="operation-container">
         <view class="" bindtap="bindTapPrev">
           <image class="md_icon" src="/images/prev.png"></image>
         </view>
-        <view class="play-icon" bindtap="bindTapPlay">
-          <!-- {{pauseStatus === false ? '暂停' : '播放'}} -->
+        <view class="play-icon" bindtap="switchPlayStatus">
           <view class="icon-wrap">
-            <block wx:if="{{pauseStatus === false}}">
-              <!-- <image class="icon" src="/images/play.png"></image> -->
+            <block wx:if="{{playStatus === true}}">
               <view class="icon">
                 <view class="suspend"></view>
               </view>
             </block>
             <block wx:else>
-              <!-- <image class="icon" src="/images/pause.png"></image> -->
               <view class="icon">
                 <view class="cart"></view>
               </view>
@@ -53,68 +51,88 @@
       <view class="desc">{{}}</view>
     </view>
   </view>
-  <view class="chapter cell-group">
-    <!-- <wux-cell-group title="章节">
-      <block wx:for="{{chapters}}" wx:key="key">
-        <wux-cell bindclick="onClickCell">
-            <view class="" slot="header" hover-class="none" hover-stop-propagation="false">
-              {{index + 1}}: {{item.title}}
-            </view>
-            <view class="" slot hover-class="none" hover-stop-propagation="false">
-              rt,lum5m56kuo65l
-            </view>
-        </wux-cell>
-      </block>
-    </wux-cell-group> -->
-    <view class="cell-group_hd">章节</view>
-    <view class="cell-group_bd">
-      <block wx:for="{{chapters}}" wx:key="key">
-        <view class="cell">
-          <view class="cell_hd">
-            <block wx:if="{{ thumb }}">
-              <image class="cell_thumb" src="{{ thumb }}" />
-            </block>
-          </view>
-          <view class="cell_bd">{{index+1}}: {{item.title}}</view>
-          <view class="cell_desc">
-            <view class="cell-lock">
-              <block wx:if="{{item.free}}">
-                <!-- <wux-tag color="#1193FE"></wux-tag> -->
-                <view class="tag">试听</view>
-              </block>
-              <block wx:else>
-                <image class="xs_icon" src="/images/lock.png"></image>
-              </block>
-            </view>
-            <view class="clock-wrap">
-              <image class="xs_icon" src="/images/clock.png"></image>
-              <text class="clock">{{item.duration}}</text>
-            </view>
-          </view>
+  <view class="nav">
+    <block wx:for="{{navBar}}" wx:for-index="idx" wx:for-item="navItem" wx:key="idx">
+      <view class="nav-item {{currentTabKey == navItem.key?'active':''}}" data-current="{{navItem.key}}" bindtap="switchNavTab">
+        {{navItem.title}}
+        <view class="slider-wrap" wx:if="{{currentTabKey == navItem.key}}">
+          <view class="navbar_slider"></view>
         </view>
-      </block>
-    </view>
+      </view>
+    </block>
   </view>
-  <view class="card-wrap">
-    <view class="media-wrap" slot="body" hover-class="none" hover-stop-propagation="false">
-      <wux-media thumb="https://soure.chudianad.com/static/advert/iconUrl/201810251836509322.jpg" thumb-style="border-radius: 300rpx" title="朱涛" label="专业播音·中国大陆">
-        <view class="btn-wrap center-right" data-appid="{{item.appid}}" data-path="{{item.path}}" slot>
-          <view class="sm-btn btn" bindtap="bindMore">更多</view>
+  <view class="tab-content">
+    <view class="" hidden="{{currentTabKey == 1?false:true}}">
+      <view class="card-wrap">
+        <view class="media-wrap" slot="body" hover-class="none" hover-stop-propagation="false">
+          <wux-media wux-class-body="media-body" thumb="{{book.anchors[0].anchorHeadImg}}" thumb-style="border-radius: 300rpx" title="{{book.anchors[0].anchorName}}" label="{{book.anchors[0].anchorIntro}}">
+            <view class="btn-wrap center-right" slot>
+              <view class="sm-btn btn" bindtap="bindAnchorsMore">更多</view>
+            </view>
+          </wux-media>
         </view>
-      </wux-media>
+      </view>
+      <view class="accordion-group-wrap">
+        <view class="group-title">关于本书</view>
+        <view class="wxParse">
+          <template is="wxParse" data="{{wxParseData:about.nodes}}" />
+        </view>
+      </view>
+      <view class="accordion-group-wrap">
+        <view class="group-title">本书金句子</view>
+        <view class="wxParse">
+          <template is="wxParse" data="{{wxParseData:goldWord.nodes}}" />
+        </view>
+      </view>
     </view>
-  </view>
-  <view class="accordion-group-wrap">
-    <wux-accordion-group title="" default-current="{{ ['0'] }}">
-      <wux-accordion title="关于本书" content="{{book.about}}"></wux-accordion>
-    </wux-accordion-group>
-  </view>
-  <view class="accordion-group-wrap">
-    <wux-accordion-group title="">
-      <wux-accordion title="本书金句" content="{{book.goldWord}}"></wux-accordion>
-    </wux-accordion-group>
+    <view class="chapter cell-group" hidden="{{currentTabKey == 2?false:true}}">
+      <view class="cell-group_bd">
+        <block wx:for="{{sections}}" wx:key="key">
+          <view class="cell" data-index="{{index}}" catch:tap="{{item.isAudition?'beginPlay':''}}">
+            <view class="cell_hd">
+              <block wx:if="{{ thumb }}">
+                <image class="cell_thumb" src="{{ thumb }}" />
+              </block>
+            </view>
+            <view class="cell_bd">{{item.sectionName}}</view>
+            <view class="cell_desc">
+              <view class="cell-lock">
+                <block wx:if="{{item.isAudition}}">
+                  <!-- <wux-tag color="#1193FE"></wux-tag> -->
+                  <view class="tag">试听</view>
+                </block>
+                <block wx:else>
+                  <image class="xs_icon" src="/images/lock.png"></image>
+                </block>
+              </view>
+              <view class="clock-wrap">
+                <image class="xs_icon" src="/images/clock.png"></image>
+                <text class="clock">{{item.sectionSec}}</text>
+              </view>
+            </view>
+          </view>
+        </block>
+      </view>
+    </view>
   </view>
   <view class="btn-container fixed bottom">
     <view class="btn lg-btn active">19书签兑换</view>
+  </view>
+</view>
+
+<view class="float-board" hidden="{{!isShowFloat}}">
+  <view class="bcg"></view>
+  <view class="wrap">
+    <view class="float-icon-wrap" bindtap="switchPlayStatus">
+      <view class="float-suspend" wx:if="{{playStatus === true}}"></view>
+      <view class="float-cart" wx:else></view>
+    </view>
+    <view class="play-info">
+      <view class="play-title">{{currentAudio.sectionName}}</view>
+      <view class="row">
+        <text class="">{{currentAudio.sectionSec}}</text>
+        <view class="tag" wx:if="currentAudio.isAudition">试听</view>
+      </view>
+    </view>
   </view>
 </view>
