--- a/pages/audio_detail/audio_detail.wxss
+++ b/pages/audio_detail/audio_detail.wxss
@@ -575,3 +575,37 @@
     border-left: 10rpx solid #fff;
     border-right: 10rpx solid #fff;
 }
+
+
+/* 按钮 */
+
+.share-btn {
+    width: 100rpx;
+    height: 100rpx;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: #fff;
+    color: #B7B7B7;
+    position: relative;
+}
+
+.share-btn>button {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0
+}
+
+.pay-btn-wrap {
+    width: 330rpx;
+    height: 100rpx;
+    color: #fff;
+    background: #FFAA0F;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
