--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -31,7 +31,7 @@
 
 .card-wrap {
     margin: 0 16rpx;
-    padding: 30rpx 30rpx;
+    padding: 30rpx 20rpx;
     background: #fff;
     height: 100%;
     box-sizing: border-box;
@@ -52,7 +52,7 @@
     height: 90rpx;
     line-height: 90rpx;
     color: #ffffff;
-    background: #CB8648;
+    background: #3772FB;
     text-align: center;
     font-size: 30rpx;
     border-radius: 10rpx;
@@ -67,18 +67,37 @@
 
 .card-title {
     width: 100%;
-    height: 60rpx;
-    line-height: 60rpx;
-    text-align: center;
-    font-weight: bold;
+    height: 90rpx;
+    line-height: 90rpx;
+    text-align: left;
     font-size: 40rpx;
+    padding: 0 20rpx;
+}
+
+.link-wrap {
+    width: 50%;
+    margin: 0 auto;
+}
+
+.link-item {
+    width: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    color: #39A7F7;
+    text-align: center;
+    height: 30rpx;
+    line-height: 30rpx;
+}
+
+.link-item:first-child {
+    border-right: 4rpx solid #39A7F7;
 }
 
 
 /* ---列表---- */
 
 .list {
-    /* padding: 20rpx; */
+    /* padding: 20rpx;  */
     box-sizing: border-box;
     display: inline-block;
     flex-direction: row;
@@ -94,25 +113,31 @@
     align-items: center;
     justify-content: center;
     position: relative;
+    margin: 10rpx 0;
 }
 
-.list-item .img {
-    width: 260rpx;
-    height: 350rpx;
-    margin: 20rpx;
+.col-wrap {
+    width: 250rpx;
+    height: 340rpx;
+    /* margin: 20rpx; */
     position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
-.list-item .img>image {
-    width: 100%;
-    height: 100%;
+.col-wrap>.img {
+    width: 250rpx;
+    height: 340rpx;
     position: absolute;
-    left: 0;
-    top: 0;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
     background: #cecece;
 }
 
-.list-item .label-wrap {
+.label-wrap {
     width: 100%;
     height: 40rpx;
     position: absolute;
@@ -152,7 +177,7 @@
 }
 
 .card-infos .price {
-    color: #CB8648;
+    color: #3772FB;
     margin: 10rpx 0;
 }
 
